fix(navbar): show title in navbar on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,8 @@
   h3,
   h4,
   h5,
-  h6 {
+  h6,
+  p {
     @apply text-slate-900;
   }
 }
